--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,35 @@
 body {
-  background: black;
+  background-color: var(--primary-color) !important;
 }
+
+
+button {
+  width: 13rem;
+  height: 2rem;
+  font-size: 1.5rem;
+  background-color: #e98208;
+  color: white;
+  border: none;
+  border-radius: 12px;
+}
+
+:root {
+  --primary-color: #edf2fc;
+  --secondary-color: #212121;
+}
+
+
+.dark-theme {
+  --primary-color: #1b1717;
+  --secondary-color: #f78504;
+}
+
+
 
 .clock {
   position: relative;
   text-align: center;
-  color: #e98208;
+  color: var(--secondary-color);
   font-size: 60px;
   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   letter-spacing: 7px;
@@ -14,7 +38,7 @@ body {
 .text1 {
   position: relative;
   text-align: center;
-  color: #e98208;
+  color: var(--secondary-color);
   font-size: 50px;
   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   letter-spacing: 7px;
@@ -24,7 +48,7 @@ body {
 .text2 {
   position: relative;
   text-align: center;
-  color: #e98208;
+  color: var(--secondary-color);
   font-size: 40px;
   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   letter-spacing: 7px;
@@ -35,4 +59,17 @@ body {
  img {
      margin-top: 120px;
      width: 17%;
+}
+
+.form {
+      margin-left: 400px;
+      margin-top: 30px;
+      color: var(--secondary-color);
+      font-size: 20px;
+
+}
+
+ .input, textarea, select{
+  border-collapse: separate;
+  border-radius:6px;
 }
